<resources>
    <!-- General -->
    <string name="app_name">24/7</string>
    <string name="title_activity_lat_long">latLong</string>
    <string name='OK'>OK</string>
    <!--
    <string name='lat_msg'>Latitude</string>
    <string name='long_msg'>Longitude</string>
    <string name='GPSBtn'>Show location</string>
    -->
    <string name="title_activity_panic">panic</string>
    <string name="title_activity_lat_long_drawer">24/7 Trucks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_gpstrack">Map</string>
    <!-- Navigation Bar -->
    <string name="credits">Credits</string>
    <string name="quit">Έξοδος</string>
    <!-- Splash screen -->
    <string name="rotatingImg">Rotating Image</string>
    <string name="base">Inner Image</string>
    <!-- Lat Long screen -->
    <string name="tick_sign">tick</string>
    <string name="app_icon">Main Application icon</string>
    <string name="split">Splitter</string>
    <string name='log_msg'>Συνδεθείτε για να συνεχίσετε</string>
    <string name='usr_msg'>Όνομα Χρήστη</string>
    <string name='pwd_msg'>Κωδικός</string>
    <string name='logged_msg'>Συνδεδεμένος</string>
    <!-- Message Bars -->
    <string name="no_internet_bar">Δεν υπάρχει σύνδεση στο internet</string>
    <string name="no_gps_bar">Δεν βρέθηκε σήμα GPS</string>
    <!-- Login screen -->
    <string name="pass_icon">Password icon</string>
    <string name="user_icon">Username Icon</string>
    <string name="btl">Back to login</string>
    <string name="moveToPass">Continue to input password</string>
    <!-- nav_head -->
    <string name="header_small">24/7</string>
    <string name="header_large">mapgr.eu</string>
    <!-- Settings -->
    <string name="timeSettings">Χρόνος Αποστολής Σήματος GPS.</string>
    <string name="settings">Ρυθμίσεις</string>


    <!-- Java -->
    <string name="wrong_cred">Το όνομα χρήστη ή ο κωδικός είναι λάθος. Παρακαλώ προσπαθήστε ξανά.</string>
    <string name="unkown_error">Ένα άγνωστο σφάλμα προέκυψε. Προσπαθήστε ξανά.</string>
    <string name="no_internet_connection">Σφάλμα. Σιγουρευτείτε πως έχετε σύνδεση στο Internet και προσπαθήστε ξανά.</string>
    <string name="title_activity_credits">credits</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Google Api Key -->
    <string name="google_maps_key">AIzaSyDLO2PWlj8LX8tjyM4zPgbqycC8OQMSw6s</string>
    <string name="title_activity_instant_messaging">InstantMessaging</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- ActivityPreference -->
    <string name="url">url</string>
    <string name="send_freq">send_freq</string>

</resources>