<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainActivity"
    tools:showIn="@layout/app_bar_lat_long_drawer">

    <ImageView
        android:contentDescription="@string/split"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/colorPrimary"
        android:id="@+id/splitter"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@id/splitter"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id='@+id/lat_text'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7.22"
            android:text='@string/logged_msg'
            android:textSize='30sp'
            android:textColor="@color/txtColor" />

        <ImageView
            android:contentDescription="@string/tick_sign"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/tick"/>
    </LinearLayout>

    <ImageButton
        android:contentDescription="@string/app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/iconlogin"
        android:id="@+id/link"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/internet_bar"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/no_internet_bar" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/gps_bar"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/no_gps_bar" />

    </LinearLayout>


</RelativeLayout>
